--- a/Expand Influence/AT-0x02.md
+++ b/Expand Influence/AT-0x02.md
@@ -2,8 +2,9 @@
 <!-- MarkdownTOC depth=3 autolink=true -->
 
 [Getting Windows domain privileges](#getting-windows-domain-privileges)
-    - Intercept Credentials
+    - Intercept credentials
         - [LLMNR/mDNS/NBNS poisonning and SMB relay](Credential%20Access/ca-1.md)
+    - Brute force credentials
 
 <!-- /MarkdownTOC -->
 
